Changed Urls clicktag

--- a/mitsubishi/Cube.html
+++ b/mitsubishi/Cube.html
@@ -974,7 +974,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i183.i184.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i195.image.js:image/base/js*/
@@ -987,7 +987,7 @@ var el = document.getElementById('i197');
 
 el.addEventListener('click', function(e){
     /*#i215.i216.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1002,7 +1002,7 @@ var el = document.getElementById('i199');
 
 el.addEventListener('click', function(e){
     /*#i217.i218.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://plus.google.com/share?url=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://plus.google.com/share?url=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1017,29 +1017,15 @@ var el = document.getElementById('i201');
 
 el.addEventListener('click', function(e){
     /*#i219.i220.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i4.i50.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i5.i185.image.js:image/base/js*/
-
-/*#/#*//*#i5.i193.image.js:image/base/js*/
 
 /*#/#*//*#i95.i189.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i189.i190.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i203.image.js:image/base/js*/
@@ -1050,7 +1036,7 @@ var el = document.getElementById('i203');
 
 el.addEventListener('click', function(e){
     /*#i221.i222.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1065,7 +1051,7 @@ var el = document.getElementById('i205');
 
 el.addEventListener('click', function(e){
     /*#i223.i224.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://plus.google.com/share?url=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://plus.google.com/share?url=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1080,29 +1066,15 @@ var el = document.getElementById('i207');
 
 el.addEventListener('click', function(e){
     /*#i225.i226.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i5.i52.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i6.i60.image.js:image/base/js*/
-
-/*#/#*//*#i6.i187.image.js:image/base/js*/
 
 /*#/#*//*#i99.i191.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i191.i192.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i209.image.js:image/base/js*/
@@ -1113,7 +1085,7 @@ var el = document.getElementById('i209');
 
 el.addEventListener('click', function(e){
     /*#i227.i228.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1128,7 +1100,7 @@ var el = document.getElementById('i211');
 
 el.addEventListener('click', function(e){
     /*#i229.i230.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://plus.google.com/share?url=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1143,21 +1115,9 @@ var el = document.getElementById('i213');
 
 el.addEventListener('click', function(e){
     /*#i231.i232.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://mitsubishi-motors.com.co/modelo/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://mitsubishi-motors.com.co/modelo/test-drive/outlander'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i6.i54.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*/
 
   function next(){
              cube_i2.rotate(cube_i2.ROTATE_NEXT)
