--- a/Decameron/videoHigh.html
+++ b/Decameron/videoHigh.html
@@ -142,6 +142,7 @@
 
         .tgx_text_small {
             font-size:80%;
+            line-height: 1.8em;
         }
 
         ul {
@@ -266,7 +267,7 @@
             <span class="tgx_text_light tgx_text_small" style="color:black;">
                 <p style="margin-top: 7.5px;">Aquí damos rienda suelta a tu imaginación haciendo realidad todo lo que más has deseado para convertir tus vacaciones en una experiencia única e inolvidable.
 
-Creemos en el poder de sorprender a nuestros clientes y somos expertos en dar experiencias de viaje únicas a través de la sorpresa y la diversión.
+Creemos en el poder de sorprender a nuestros clientes y somos expertos en dar experiencias de viaje únicas a través de la sorpresa y la diversión. <br>
 
 Disfruta nuestro #TodoIncluido hasta la última gota porque tú
 lo mereces todo. 
