--- a/Decameron/Cube3d.html
+++ b/Decameron/Cube3d.html
@@ -894,7 +894,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Estos son los hoteles de México Todo Incluido más valorados: Los Cabos.</div>
+<div id="i14">Estos son los hoteles de México Todo Incluido más valorados: Los Cabos</div>
 <!--#/#--><!--#i4.i56.image.html:image/html-->
 <img id="i56" src="https://i.imgur.com/RkHSWDh.jpg"/>
 <!--#/#--><!--#i4.i104.image.html:image/html-->
@@ -934,7 +934,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Estos son los hoteles de México Todo Incluido más valorados: Complex.</div>
+<div id="i34">Estos son los hoteles de México Todo Incluido más valorados: Complex</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/U8nQbTq.jpg"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
