Correcciones para decameron

--- a/Decameron/panamaCube-English.html
+++ b/Decameron/panamaCube-English.html
@@ -504,7 +504,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 21px; color: #6b6767; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 17.5px; color: #6b6767; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 291px; height: 34px;
         -ms-transform: translate(-50%, -50%) translate(-4px, 53px) rotate(0deg);
@@ -588,7 +588,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 21px; color: #666565; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 17.5px; color: #666565; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 291px; height: 46px;
         -ms-transform: translate(-50%, -50%) translate(0px, 56px) rotate(0deg);
@@ -801,13 +801,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 21px; color: #706f6f; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 17.5px; color: #706f6f; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 290px; height: 43px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 55px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 55px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 55px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 55px) rotate(0deg);
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 281px; height: 32px;
+        -ms-transform: translate(-50%, -50%) translate(2px, 60px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(2px, 60px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(2px, 60px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(2px, 60px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -1143,7 +1143,7 @@ name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i14.text.meta:text/meta*/
-name: Este destino te sorprenderá.; customName: false;
+name: Este destino te sorprenderá; customName: false;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i56.image.meta:image/meta*/
@@ -1182,7 +1182,7 @@ name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i24.text.meta:text/meta*/
-name: Este destino te sorprenderá.; customName: false;
+name: Este destino te sorprenderá; customName: false;
 /*#/#*//*#i24.i25.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i58.image.meta:image/meta*/
@@ -1221,7 +1221,7 @@ name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i34.text.meta:text/meta*/
-name: Este destino te sorprenderá.; customName: false;
+name: Este destino te sorprenderá; customName: false;
 /*#/#*//*#i34.i35.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i60.image.meta:image/meta*/
