Correccion puntaje d etipografia video

--- a/Decameron/videoHigh.html
+++ b/Decameron/videoHigh.html
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 41%;
+            top: 45%;
             left: 5px;
             width: 90%;
             padding: 0.3em;
@@ -142,7 +142,7 @@
         }
 
         .tgx_text_small {
-            font-size:70%;
+            font-size:90%;
           top: 20%;
             line-height: 1.8em;
         }
@@ -267,12 +267,12 @@
                Déjate sorprender
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 5px;">Aquí damos rienda suelta a tu imaginación haciendo realidad todo lo que más has deseado para convertir tus vacaciones en una experiencia única e inolvidable.<br> <br>
+                <p style="margin-top: 5px;">Damos rienda suelta a tu imaginación haciendo realidad todo lo que más has deseado. <br>
 
-Creemos en el poder de sorprender a nuestros clientes y somos expertos en dar experiencias de viaje únicas a través de la sorpresa y la diversión. <br> <br>
+Creemos en el poder de sorprender a nuestros clientes y somos expertos en dar experiencias de viaje únicas.<br>
 
 Disfruta nuestro #TodoIncluido hasta la última gota porque tú
-lo mereces todo. 
+lo mereces todo.
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:4.5%">
