Texto en negrita

--- a/Decameron/videoHigh.html
+++ b/Decameron/videoHigh.html
@@ -267,11 +267,11 @@
                Déjate sorprender
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 5px;">Damos rienda suelta a tu imaginación haciendo realidad todo lo que más has deseado. <br>
+                <p style="margin-top: 5px;">Damos rienda suelta a tu imaginación haciendo <strong>realidad todo lo que más has deseado.</strong> <br>
 
-Creemos en el poder de sorprender a nuestros clientes y somos expertos en dar experiencias de viaje únicas.<br>
+Creemos en el poder de sorprender a nuestros clientes y somos expertos en dar <strong> experiencias de viaje únicas.</strong><br>
 
-Disfruta nuestro #TodoIncluido hasta la última gota porque tú
+Disfruta nuestro <strong>#TodoIncluido</strong> hasta la última gota porque tú
 lo mereces todo.
             </span>
 
