Correccion de texto y diagramacion

--- a/Hermobile/videoHigh.html
+++ b/Hermobile/videoHigh.html
@@ -121,7 +121,7 @@
         }
 
         .tgx_text_title {
-            font-size: 75%;
+            font-size: 90%;
             color: #453936;
             display: inline-block;
             width: 90%;
@@ -266,13 +266,13 @@
             <span class="tgx_text_light tgx_text_small" style="color:black;">
                 <p style="margin-top: -3px;">Unimos a las personas creando y fortaleciendo vínculos por medio de un servicio de telefonía móvil con beneficios excepcionales. </p> <p style="margin-top:-10px;"><strong>
                ¿Y por qué Her Mobile?</strong></p>
-                <p style="margin-top:-14px;"> Es la primera red móvil que, más allá de ofrecer un servicio de telefonía, busca impulsar el emprendimiento de la mujer mexicana.</p>
+                <p style="margin-top:-14px;"> Es la primera red móvil de emprendimiento de la mujer mexicana.</p>
                  <p style="margin-top:-14px;"><strong>Beneficios</strong> </p>
-                 <p style="margin-top:-14px;">- Somos una telefonía sencilla, sin complicaciones y con las mejores tarifas. Sin contratos. Sin plazos forzosos. Sin tarjetas de crédito.</p>
+                 <p style="margin-top:-14px;">- Somos una telefonía sencilla, sin complicaciones y con las mejores tarifas.</p>
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:1%">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:-2px;">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:4px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hermobile.mx/pvsher/index"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="22" /></a>
@@ -284,7 +284,7 @@
                             <img alt="compartir en twitter" class="twitteri" height="22" src="http://3.bp.blogspot.com/-TgonF6vzJs0/Uh1Hmxqk8aI/AAAAAAAAAiA/MdT4pRWKRbI/s1600/twitter.png" title="compartir en twitter" width="22" /></a>
                     </span>
                 </div>
-                <div class="logo" style="margin-right: 0px;margin-top: -14px">
+                <div class="logo" style="margin-right: 0px;margin-top: -10px">
                     <img src="https://i.imgur.com/QUzmZEG.png" style="height:35px">
                 </div>
             </div>
