Changed Margin right title Added Bold text in description content

--- a/BetPlay/videohigh.html
+++ b/BetPlay/videohigh.html
@@ -125,7 +125,8 @@
             color: #453936;
             display: inline-block;
             width: 110%;
-            margin-bottom: 8px;
+            margin-top: -20px;
+            margin-bottom: -10px;
         }
 
         .tgx_text_light {
@@ -261,14 +262,14 @@
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-                Conoce la red de Apuestas Deportivas Online más grande en Colombia
+                <p style="margin-right:35px;">Conoce la red de Apuestas Deportivas Online más grande en Colombia</p>
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 0px; margin-right:5px; line-height:1.2;">Betplay cubre los eventos más populares para que puedas acceder a ellos con tan solo un clic. 
+                <p style="margin-top: 0px; margin-right:5px; line-height:1.2;"><b>Betplay</b> cubre los eventos más populares para que puedas acceder a ellos con tan solo un clic. 
                 <br><br>
-                En esta pequeña sección están presentes las ligas y competiciones más seguidas a nivel mundial, pero también la Liga Águila, Liga Santander, la Premier League, la Ligue 1, el Mundial de Rusia 2018… 
+                En esta pequeña sección están presentes las ligas y competiciones más seguidas a nivel mundial, pero también la <b>Liga Águila, Liga Santander, la Premier League, la Ligue 1, el Mundial de Rusia 2018</b>… 
                 <br><br>
-                También eventos del mundo del tenis, del baloncesto, del ciclismo, de los deportes de motor, del hockey, del tenis de mesa, del boxeo…</p>
+                También eventos del mundo del <b>tenis, del baloncesto, del ciclismo, de los deportes de motor, del hockey, del tenis de mesa, del boxeo</b>…</p>
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:-3.5%">
