Fixed font size title Delected some text in description

--- a/BetPlay/videohigh.html
+++ b/BetPlay/videohigh.html
@@ -121,7 +121,7 @@
         }
 
         .tgx_text_title {
-            font-size: 110%;
+            font-size: 100%;
             color: #453936;
             display: inline-block;
             width: 110%;
@@ -257,7 +257,7 @@
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
-            <div class="tgx_logo"><span class="tgx_text_bold" style="font-size:80%;">Apuesta Ya!</span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold" style="font-size:80%;">¡Apuesta Ya!</span></div>
         </div>
            
         <div class="tgx_text"> 
@@ -269,7 +269,7 @@
                 <br><br>
                 En esta pequeña sección están presentes las ligas y competiciones más seguidas a nivel mundial, pero también la <b>Liga Águila, Liga Santander, la Premier League, la Ligue 1, el Mundial de Rusia 2018</b>… 
                 <br><br>
-                También eventos del mundo del <b>tenis, del baloncesto, del ciclismo, de los deportes de motor, del hockey, del tenis de mesa, del boxeo</b>…</p>
+                También eventos del mundo del <b>tenis, del baloncesto, del ciclismo, de los deportes de motor, del hockey</b>…</p>
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:-3.5%">
