Added Rotation Functionality

--- a/BetPlay/cube3d.html
+++ b/BetPlay/cube3d.html
@@ -1103,6 +1103,11 @@ document.getElementById('i6').addEventListener('click', function(e){
 /*#/#*/
 });
 /*#/#*/
+    
+function next(){
+    cube_i2.rotate(cube_i2.ROTATE_NEXT)
+}
+setInterval(next, 5000);
 </script>
 <!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i8.font.meta:font/meta*/
 name: Web Font: Source Sans Pro; type: font-google; customName: ;
