--- a/BetPlay/videohigh.html
+++ b/BetPlay/videohigh.html
@@ -253,7 +253,7 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe width="320" height="180" src="https://www.youtube.com/embed/piuUdSBcaAs?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="320" height="180" src="https://www.youtube.com/embed/piuUdSBcaAs?rel=0&autoplay=1&modestbranding=0&playlist=piuUdSBcaAs&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
