Correccion de texto

--- a/fajitex/video.html
+++ b/fajitex/video.html
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 43.5%;
+            top: 40%;
             left: 5px;
             width: 95%;
             padding: 0.3em;
@@ -264,8 +264,8 @@
                 Realza tu cuerpo y tu estilo
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 7.5px;">Las Fajas, se convierten ahora en un básico que llega renovado, realzas tu figura y logras que las tendencias del momento se vean mucho mejor en ti. </p> <p style="margin-top:-10px;">Son prendas cómodas, ágiles, que se adaptan a cada una de las necesidades. <br>
-                Con la ayuda de telas inteligentes y una moldería perfecta, FAJITEX te permite encontrar la Faja que más se adapta a cada mujer y a su estilo de vida.
+                <p style="margin-top: 3px;">Las Fajas, se convierten ahora en un básico que llega renovado,<strong> realzas tu figura</strong> y logras que las tendencias del momento se vean mucho mejor en ti. </p> <p style="margin-top:-5px;">Son <strong>prendas cómodas,</strong> ágiles, que se adaptan a cada una de las necesidades. <br></p> 
+                Con la ayuda de <strong>telas inteligentes</strong> y una moldería perfecta, FAJITEX te permite encontrar la Faja que más se adapta a cada mujer y a su estilo de vida.
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:4.5%">
