--- a/HSBC/videoHigh.html
+++ b/HSBC/videoHigh.html
@@ -272,7 +272,7 @@
                     Algunas de las ventajas de esta nueva tarjeta son:
                 </p>
                     <ol style="list-style-type:circle; margin-top:-5px; margin-left:-20px; line-height:1.4;">
-                        <li><b>Recibe 2% de tus compras</b> en Saldo HSBC 2Now1.</li>
+                        <li><b>Recibe 2% de tus compras</b> en Saldo HSBC 2Now1</li>
                         <li><b>Paga con el Saldo HSBC 2Now</b> en cualquier comercio o retira tu Saldo en cualquier Cajero Automáticos HSBC</li>
                         <li><b>Ahórrate la comisión</b> por Mantenimiento y Administración al realizar compras de $2,500 M.N o más al mes</li>
                     </ol>
@@ -285,7 +285,7 @@
             </span>
             
 
-            <div style="bottom:0px;height: 1px;text-align:left;margin-top:-5%">
+            <div style="bottom:0px;height: 1px;text-align:left;margin-top:-6.5%">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:10px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.hsbc.com.mx/1/2/es/personas/tarjetas-de-credito/hsbc-2now"  target="block">    
