--- a/Tres Cielos/video.html
+++ b/Tres Cielos/video.html
@@ -32,7 +32,7 @@
 
         .tgx_wrapper.size_300x250 {
             width: 298px;
-            height: 248px;
+            height: 290px;
         }
 
         .tgx_wrapper.size_320x480 {
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 41%;
+            top: 57%;
             left: 5px;
             width: 90%;
             padding: 0.3em;
@@ -121,7 +121,7 @@
         }
 
         .tgx_text_title {
-            font-size: 95%;
+            font-size: 98%;
             color: #453936;
             display: inline-block;
             width: 110%;
@@ -187,7 +187,7 @@
             width: 60px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 45%;
+            margin-left: 50%;
             left: -30px;
             background-color: #109196;
             padding: 5px;
@@ -252,7 +252,7 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe width="320" height="180" src="https://www.youtube.com/embed/3DvYXx5V5Co?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left:-70px;" width="460" height="260"src="https://www.youtube.com/embed/3DvYXx5V5Co?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
@@ -261,10 +261,10 @@
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               ¡Ven al Showroom del mejor jardín de Tequesquitengo!
+               ¿Planeas casarte?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: -2px;">Este <strong>sábado 30 de junio,</strong> ¡déjate consentir por nosotros! Asiste a nuestro showroom exclusivo para futuros novios y conoce el escenario para la <strong>boda de tus sueños.</strong> </p> <p style="margin-top:10px;">-Coctel <br> -Recorridos<br> -Degustaciones</p><p style="margin-top:10px;"><strong>¡Y todo lo que necesitas par tu boda!</strong></p>
+                <p style="margin-top: -2px;"> <strong>Este 30 de junio, </strong>asiste a nuestro showroom y conoce el lugar para la boda de tus sueños  </p> <p style="margin-top:10px;">Coctel, Recorridos, Degustaciones</p><p style="margin-top:10px;">Jardín Tres Cielos, Tequesquitengo, Morelos, <br> <strong>¡A menos de dos horas de la CDMX!</strong></p>
             </span>
 
             
