Correccion de texto de video

--- a/Tres Cielos/video.html
+++ b/Tres Cielos/video.html
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 57%;
+            top: 59%;
             left: 5px;
             width: 90%;
             padding: 0.3em;
@@ -177,7 +177,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -35px;
+            margin-top: -45px;
             margin-right: -25px;
         }
         
@@ -264,7 +264,7 @@
                ¿Planeas casarte?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: -2px;"> <strong>Este 30 de junio, </strong>asiste a nuestro showroom y conoce el lugar para la boda de tus sueños  </p> <p style="margin-top:10px;">Coctel, Recorridos, Degustaciones</p><p style="margin-top:10px;">Jardín Tres Cielos, Tequesquitengo, Morelos, <br> <strong>¡A menos de dos horas de la CDMX!</strong></p>
+                <p style="margin-top: -2px;"> <strong>Este 30 de junio, </strong>asiste a nuestro showroom y conoce el lugar para la boda de tus sueños  </p> <p style="margin-top:10px;">Coctel, Recorridos, Degustaciones</p><p style="margin-top:2px;">Jardín Tres Cielos, Tequesquitengo, Morelos,</p> <p style="margin-top:-3px;"> <strong>¡A menos de dos horas de la CDMX!</strong></p>
             </span>
 
             
