--- a/Midas/fade3.html
+++ b/Midas/fade3.html
@@ -7,149 +7,149 @@
     <title>Consumer_Fade</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel=stylesheet>
     <style>
-        .ClaroColombiaFade p {
+        .fade3 p {
             margin: 0px
         }
 
-        .ClaroColombiaFade .bg.cover-1,
-        .ClaroColombiaFade .bg.cover-2,
-        .ClaroColombiaFade .bg.cover-3,
-        .ClaroColombiaFade {
+        .fade3 .bg.cover-1,
+        .fade3 .bg.cover-2,
+        .fade3 .bg.cover-3,
+        .fade3 {
             background-size: cover
         }
 
-        .ClaroColombiaFade .btn {
+        .fade3 .btn {
             margin-top: 0;
             padding-left: 0
         }
 
-        .ClaroColombiaFade a,
-        .ClaroColombiaFade a:hover {
+        .fade3 a,
+        .fade3 a:hover {
             text-decoration: none;
             color: #fff
         }
 
-        .ClaroColombiaFade .bzm_wrapper {
+        .fade3 .bzm_wrapper {
             position: relative;
             overflow: hidden;
             color: #000;
             font-family: Lato, sans-serif
         }
 
-        .ClaroColombiaFade .bzm_wrapper.size_300x250 {
+        .fade3 .bzm_wrapper.size_300x250 {
             width: 300px;
             height: 250px;
             background-color: #FFF
         }
 
-        .ClaroColombiaFade .bzm_cover,
-        .ClaroColombiaFade .carousel-wrapper {
+        .fade3 .bzm_cover,
+        .fade3 .carousel-wrapper {
             position: relative;
             width: 100%
         }
 
-        .ClaroColombiaFade .bzm_cover {
+        .fade3 .bzm_cover {
             height: 150px
         }
 
-        .ClaroColombiaFade .bg.cover-1 {
+        .fade3 .bg.cover-1 {
             background-image: url(https://i.imgur.com/3f4uAkr.jpg)
         }
 
-        .ClaroColombiaFade .bg.cover-2 {
+        .fade3 .bg.cover-2 {
             background-image: url(https://i.imgur.com/Lvv56s3.jpg)
         }
 
-        .ClaroColombiaFade .bg.cover-3 {
+        .fade3 .bg.cover-3 {
             background-image: url(https://i.imgur.com/XKlr1nY.jpg)
         }
 
-        .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
+        .fade3 .bzm_cover.bzm_pos_tl {
             top: 3%;
             left: 3%
         }
 
-        .ClaroColombiaFade .bzm_pos_tr {
+        .fade3 .bzm_pos_tr {
             top: 3%;
             right: 3%
         }
 
-        .ClaroColombiaFade .bzm_pos_bl {
+        .fade3 .bzm_pos_bl {
             bottom: 3%;
             left: 3%
         }
 
-        .ClaroColombiaFade .bzm_pos_br {
+        .fade3 .bzm_pos_br {
             bottom: 3%;
             right: 3%
         }
 
-        .ClaroColombiaFade .bzm_pos_bm {
+        .fade3 .bzm_pos_bm {
             bottom: 3%;
             left: calc(100% - 70%)
         }
 
-        .ClaroColombiaFade .bzm_text {
+        .fade3 .bzm_text {
             padding: 6px 0 0 .3em;
             line-height: 1.1;
             color: #000
         }
 
-        .ClaroColombiaFade .bzm_text_title {
+        .fade3 .bzm_text_title {
             font-size: 14px;
             color: #000
         }
 
-        .ClaroColombiaFade .bzm_text_light {
+        .fade3 .bzm_text_light {
             font-size: 10px;
             font-weight: 0
         }
 
-        .ClaroColombiaFade .bzm_text_medium {
+        .fade3 .bzm_text_medium {
             font-size: 14px;
             font-weight: 500;
             line-height: 1.7
         }
 
-        .ClaroColombiaFade .bzm_text_bold {
+        .fade3 .bzm_text_bold {
             font-size: 18px;
             font-weight: 700;
             line-height: 1
         }
 
-        .ClaroColombiaFade .bzm_text_small {
+        .fade3 .bzm_text_small {
             font-size: 10px;
             line-height: 1
         }
 
-        .ClaroColombiaFade .carousel-wrapper {
+        .fade3 .carousel-wrapper {
             height: auto;
             margin: 0 auto
         }
 
-        .ClaroColombiaFade .carousel-item1 {
+        .fade3 .carousel-item1 {
             position: absolute;
             opacity: 0;
             transition: all .5s ease-in-out
         }
 
-        .ClaroColombiaFade [id^=item] {
+        .fade3 [id^=item] {
             display: none
         }
 
-        .ClaroColombiaFade .item-1 {
+        .fade3 .item-1 {
             z-index: 2;
             opacity: 1;
             animation: fade 14s infinite;
             -webkit-animation: fade 14s infinite
         }
 
-        .ClaroColombiaFade .item-2 {
+        .fade3 .item-2 {
             animation: fade2 14s infinite;
             -webkit-animation: fade2 14s infinite
         }
 
-        .ClaroColombiaFade .item-3 {
+        .fade3 .item-3 {
             animation: fade3 14s infinite;
             -webkit-animation: fade3 14s infinite
         }
@@ -190,7 +190,7 @@
             }
         }
 
-        .ClaroColombiaFade .bzm_button {
+        .fade3 .bzm_button {
             position: absolute;
             bottom: 7px;
             left: 3%;
@@ -204,17 +204,17 @@
             cursor: pointer
         }
 
-        .ClaroColombiaFade .bzm_button:hover {
+        .fade3 .bzm_button:hover {
             background-color: #579e38
         }
 
-        .ClaroColombiaFade .carousel-container {
+        .fade3 .carousel-container {
             width: 300px;
             height: 150px;
             overflow-y: hidden
         }
 
-        .ClaroColombiaFade #botones-para-compartir {
+        .fade3 #botones-para-compartir {
             text-align: right
         }
 
@@ -235,7 +235,7 @@
     </style>
 </head>
 
-<body class="ClaroColombiaFade" style="margin:0px;">
+<body class="fade3" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
         <a href="https://www.midas.es/" style="display: block;" target="_blank">
             <div class="carousel-container">
