--- a/Midas/fade3.html
+++ b/Midas/fade3.html
@@ -243,9 +243,9 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;">Ahorra tranquilamente. Incluso en la revisión de tu coche con La Revisión Oficial Midasa</span></div>
-            <div style="bottom:0px;height: 26px;text-align:right;margin-top:0px;"> 
-              <img src="https://i.imgur.com/jOh1dFA.png" style="height:33px;margin-right:5px;">
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:22px;width:95%">Ahorra tranquilamente. Incluso en la revisión de tu coche con La Revisión Oficial Midas</span></div>
+            <div style="bottom:0px;height: 26px;text-align:right;margin-top:-23px;"> 
+              <img src="https://i.imgur.com/jOh1dFA.png" style="height:33px;margin-right:7px;">
             </div>
         </a>
     </div>
