--- a/Midas/Cube3d3.html
+++ b/Midas/Cube3d3.html
@@ -494,7 +494,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
+#i20 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -504,13 +504,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #302e2e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #302e2e; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 290px; height: 43px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 57px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 57px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 57px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 57px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 282px; height: 42px;
+        -ms-transform: translate(-50%, -50%) translate(-4px, 61px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-4px, 61px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-4px, 61px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-4px, 61px) rotate(0deg);
 }
 /*#/#*//*#i4.i56.image.css:image/base/css*/
 #i56 { opacity: 1; }
@@ -525,10 +525,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i64 { opacity: 1;}
 /*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
 #i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 32px;
-        -ms-transform: translate(0, 0) translate(232px, 203px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(232px, 203px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(232px, 203px) rotate(0deg);
-        transform: translate(0, 0) translate(232px, 203px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(232px, 211px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(232px, 211px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(232px, 211px) rotate(0deg);
+        transform: translate(0, 0) translate(232px, 211px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -545,7 +545,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
+#i30 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
 #i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -555,13 +555,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1f1f1f; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #1f1f1f; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 42px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 55px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 50px;
+        -ms-transform: translate(-50%, -50%) translate(-1px, 66px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 66px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 66px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 66px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -705,10 +705,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i66 { opacity: 1;}
 /*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
 #i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 32px;
-        -ms-transform: translate(0, 0) translate(235px, 202px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(235px, 202px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(235px, 202px) rotate(0deg);
-        transform: translate(0, 0) translate(235px, 202px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(235px, 211px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(235px, 211px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(235px, 211px) rotate(0deg);
+        transform: translate(0, 0) translate(235px, 211px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -725,7 +725,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
-#i40 { background-color: #fafafa; opacity: 1;
+#i40 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -735,13 +735,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #141414; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #141414; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 282px; height: 47px;
-        -ms-transform: translate(-50%, -50%) translate(2px, 56px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(2px, 56px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(2px, 56px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(2px, 56px) rotate(0deg);
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 282px; height: 38px;
+        -ms-transform: translate(-50%, -50%) translate(2px, 61px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(2px, 61px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(2px, 61px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(2px, 61px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -768,10 +768,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i104 { opacity: 1; }
 /*#/#*//*#i104.i105.positioning.css:positioning/base/css.1*/
 #i104 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 32px;
-        -ms-transform: translate(0, 0) translate(236px, 202px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(236px, 202px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(236px, 202px) rotate(0deg);
-        transform: translate(0, 0) translate(236px, 202px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(236px, 211px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(236px, 211px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(236px, 211px) rotate(0deg);
+        transform: translate(0, 0) translate(236px, 211px) rotate(0deg);
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
